Bug 137341 - UI font is not visible in Contextual Groups and Groupedbar Compact UIs when system dark mode is enabled
Summary: UI font is not visible in Contextual Groups and Groupedbar Compact UIs when s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.1.2 release
Hardware: x86-64 (AMD64) Linux (All)
: high normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.5.0 target:7.4.2 target:7.3.7
Keywords: bibisected, bisected, regression
: 139723 142070 143227 147047 (view as bug list)
Depends on:
Blocks: Notebookbar-ContextualGroups Notebookbar-Groupedbar Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2020-10-08 16:21 UTC by rahul sahoo
Modified: 2022-12-07 10:21 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
UI font of the ribbon is not visible. (59.12 KB, image/png)
2020-10-08 16:31 UTC, rahul sahoo
Details
Black text on dark background (85.78 KB, image/png)
2021-04-09 18:28 UTC, Smith Rockford
Details

Note You need to log in before you can comment on or make changes to this bug.
Description rahul sahoo 2020-10-08 16:21:11 UTC
Description:
I have upgraded my libre office 6.4.42 to 7.0.1.2. The font of the UI is black and the system theme is also black so it is quite difficult to read them. It was not like this when I was using the previous version. This appears when I switch the User Interface to Contextual Groups. I am currently using Linux pop-os 5.4.0-7642-generic.

Steps to Reproduce:
1. On Pop Os 20 change the theme to dark.
2. Open any Libre office application and Go to View->User Interface-> Contextual groups.
3. 

Actual Results:
All the UI font will be black over black background.

Expected Results:
The UI font should be white over black background.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.0.1.2
Build ID: 7cbcfc562f6eb6708b5ff7d7397325de9e764452
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Flatpak
Calc: threaded
Comment 1 rahul sahoo 2020-10-08 16:31:16 UTC
Created attachment 166201 [details]
UI font of the ribbon is not visible.
Comment 2 cwestkaemper 2020-12-04 21:57:27 UTC
Can confirm identical behaviour accross two of my machines, both running Libreoffice 7.0.1.2 in GTK.
Comment 3 cwestkaemper 2020-12-04 21:58:31 UTC
As a workaround for the time being, switch to tabbed UI under view-user interface-tabbed. Most of the text in tabbed UI works properly, but not all of it.
Comment 4 cwestkaemper 2020-12-04 21:59:40 UTC
In tabbed mode, the only text that doesn't render right is the text for dropdown menus
Comment 5 Smith Rockford 2021-04-09 18:27:23 UTC
I also have this problem with GNOME 40 on Arch.  Using the Adwaita-dark theme and the UI text is black above a dark background that makes it very hard to read.  Ask if more details are needed.
Comment 6 Smith Rockford 2021-04-09 18:28:56 UTC
Created attachment 171068 [details]
Black text on dark background
Comment 7 Timur 2021-06-03 13:19:31 UTC
There are other bugs with dark theme. 
What's your icon style in Options-LO-View?
Comment 8 Stéphane Guillou (stragu) 2021-10-19 07:05:50 UTC
Very much related to Bug 139723.

Timur, according to attachment 166201 [details], the icons seem to be the default Elementary set (with tiny differences compared to my earliest LO version I have currently installed, 7.1.6.2). However, changing the icon set does not impact the text colour at all – at least on my system.

Confirmed with recent master build (after activating experimental features to be able to switch to "contextual groups" UI):

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 5b2848413883565c48d312c96daf8fbca25405d8
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-10-11_23:38:53
Calc: threaded

and also:

Version: 7.1.6.2 / LibreOffice Community
Build ID: 0e133318fcee89abacd6a7d077e292f1145735c3
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 9 Stéphane Guillou (stragu) 2022-04-11 06:03:17 UTC
As shown in attachment 171068 [details], this is also an issue for the "Groupedbar Compact" UI variant.

Tested on Ubuntu 20.04 with:

Version: 7.3.2.2 / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

This is a regression as I can't reproduce on:

Version: 6.4.7.2
Build ID: 1:6.4.7-0ubuntu0.20.04.4
CPU threads: 8; OS: Linux 5.13; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 10 Timur 2022-09-12 12:05:15 UTC
Same commit 8d11b953c0a69f4f5eb5ca42dec3812a62d0cd0f as in bug 139723.
Comment 11 Xisco Faulí 2022-09-15 13:46:48 UTC
*** Bug 139723 has been marked as a duplicate of this bug. ***
Comment 12 Xisco Faulí 2022-09-16 08:04:29 UTC Comment hidden (obsolete)
Comment 13 Michael Weghorn 2022-09-16 08:40:24 UTC
(In reply to Xisco Faulí from comment #12)
> Hi Michael,
> Since you recently fixed bug 136928, I thought you might be interested in
> this one as well

Well, I wouldn't say this is my main area of interest, but there's now
https://gerrit.libreoffice.org/c/core/+/140058

From what I can see, only gtk3 is affected, kf5 and Windows should be fine.
Comment 14 Commit Notification 2022-09-16 10:40:12 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b855f9d430c4dce2936e7bd1208159bc38d5b199

tdf#137341 gtk: Set missing style text colors from theme

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Michael Weghorn 2022-09-16 10:41:25 UTC
In a very cursory test, this seemed to be OK with the commit from comment 14 in place, further testing highly welcome.

Backport for 7-4 pending in Gerrit:
https://gerrit.libreoffice.org/c/core/+/139984
Comment 16 Commit Notification 2022-09-17 03:11:37 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2103178720fd485651b94b7819ea33ec602c3b79

tdf#137341 gtk: Set missing style text colors from theme

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Stéphane Guillou (stragu) 2022-09-17 19:49:11 UTC
Verified as fixed in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 3752e8eaa81a50b018669d03dc59b3753a5248ef
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Both the dropdowns in Tabbed UI and all the text in the experimental Contextual Groups UI now use a white font that contrasts well.

Thank you Michael!
Comment 18 Commit Notification 2022-09-19 15:27:38 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/fe012a9a3ff16db3e90165cbc2fa226d925166ee

tdf#137341 gtk: Set missing style text colors from theme

It will be available in 7.3.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Caolán McNamara 2022-12-07 10:18:27 UTC
*** Bug 143227 has been marked as a duplicate of this bug. ***
Comment 20 Caolán McNamara 2022-12-07 10:20:33 UTC
*** Bug 142070 has been marked as a duplicate of this bug. ***
Comment 21 Caolán McNamara 2022-12-07 10:21:41 UTC
*** Bug 147047 has been marked as a duplicate of this bug. ***