tdf#137341 gtk: Set missing style text colors from theme

commit 8d11b953c0a69f4f5eb5ca42dec3812a62d0cd0f
    Date:   Sun Feb 23 21:11:05 2020 +0100

        tdf#125532: White text on default/action buttons and selected tabs on macOS

had introduced various new text colors to the style
settings, but some were not set from the theme for gtk.

Add the missing ones.

Change-Id: I1bd7ce358626b3f4ff1d6f2794d5c0f19f78a668
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140058
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>